--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "sources/meta-fsl-arm"]
 	path = sources/meta-fsl-arm
-	url = https://git.yoctoproject.org/meta-fsl-arm
+	url = git://git.yoctoproject.org/meta-fsl-arm
 [submodule "sources/poky"]
 	path = sources/poky
-	url = https://git.yoctoproject.org/git/poky
+	url = git://git.yoctoproject.org/poky
 [submodule "sources/meta-tq"]
 	path = sources/meta-tq
 	url = ../meta-tq.git
