--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,28 @@
 [submodule "sources/meta-fsl-arm"]
 	path = sources/meta-fsl-arm
 	url = git://git.yoctoproject.org/meta-fsl-arm
+	branch = krogoth
 [submodule "sources/poky"]
 	path = sources/poky
 	url = git://git.yoctoproject.org/poky
+	branch = krogoth
 [submodule "sources/meta-tq"]
 	path = sources/meta-tq
 	url = ../meta-tq.git
+	branch = krogoth
 [submodule "sources/meta-openembedded"]
 	path = sources/meta-openembedded
 	url = https://github.com/openembedded/meta-openembedded.git
+	branch = krogoth
 [submodule "sources/meta-fsl-arm-extra"]
 	path = sources/meta-fsl-arm-extra
 	url = https://github.com/Freescale/meta-fsl-arm-extra.git
+	branch = krogoth
 [submodule "sources/meta-fsl-demos"]
 	path = sources/meta-fsl-demos
 	url = https://github.com/Freescale/meta-fsl-demos.git
+	branch = krogoth
 [submodule "sources/meta-tq-distro-fsl"]
 	path = sources/meta-tq-distro-fsl
 	url = ../meta-tq-distro-fsl.git
+	branch = krogoth
