ci: comment env needed for Jenkinsfile
Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -23,7 +23,11 @@ def wipeOutWs(){
 /**********************************************************************/
 /*******************         Pipeline         *************************/
 /**********************************************************************/
-
+/*
+ * jenkins environment for this pipeline:
+ * - GIT_URL: git URL for projebt to build
+ * - MAIL_RECIPIENTS: comma separated list of mail recipients
+ */
 pipeline {
     agent {
         label 'master'
