--- a/.gitmodules
+++ b/.gitmodules
@@ -1,28 +1,24 @@
-[submodule "sources/meta-fsl-arm"]
-	path = sources/meta-fsl-arm
-	url = git://git.yoctoproject.org/meta-fsl-arm
-	branch = krogoth
 [submodule "sources/poky"]
 	path = sources/poky
 	url = git://git.yoctoproject.org/poky
-	branch = krogoth
+	branch = morty
 [submodule "sources/meta-tq"]
 	path = sources/meta-tq
 	url = ../meta-tq.git
-	branch = krogoth
+	branch = morty
 [submodule "sources/meta-openembedded"]
 	path = sources/meta-openembedded
 	url = https://github.com/openembedded/meta-openembedded.git
-	branch = krogoth
-[submodule "sources/meta-fsl-arm-extra"]
-	path = sources/meta-fsl-arm-extra
-	url = https://github.com/Freescale/meta-fsl-arm-extra.git
-	branch = krogoth
-[submodule "sources/meta-fsl-demos"]
-	path = sources/meta-fsl-demos
-	url = https://github.com/Freescale/meta-fsl-demos.git
-	branch = krogoth
+	branch = morty
 [submodule "sources/meta-tq-mfgtool"]
 	path = sources/meta-tq-mfgtool
 	url = ../meta-tq-mfgtool.git
 	branch = krogoth
+[submodule "sources/meta-freescale"]
+	path = sources/meta-freescale
+	url = https://git.yoctoproject.org/git/meta-freescale
+	branch=morty
+[submodule "sources/meta-freescale-distro"]
+	path = sources/meta-freescale-distro
+	url = https://github.com/Freescale/meta-freescale-distro.git
+	branch=morty
