--- a/.gitmodules
+++ b/.gitmodules
@@ -13,7 +13,7 @@
 [submodule "sources/meta-tq-mfgtool"]
 	path = sources/meta-tq-mfgtool
 	url = ../meta-tq-mfgtool.git
-	branch = krogoth
+	branch = morty
 [submodule "sources/meta-freescale"]
 	path = sources/meta-freescale
 	url = https://git.yoctoproject.org/git/meta-freescale
