ci/Jenkinsfile: [hack] handle sstate cache
no access to build cause, so heuristic cleanup cache if time
is before six o'clock

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -2,6 +2,9 @@
  * Jenkinsfile for Yocto-BSPs using declarative pipeline
  */
 
+import java.text.*
+import groovy.time.*
+
 /**********************************************************************/
 /*******************         Functions         ************************/
 /**********************************************************************/
@@ -55,6 +58,17 @@ def wipeOutBuildspace(directoryName){
     }
 }
 
+// @NonCPS
+// def manageSstateCache(startTime) {
+    // Get a specific Cause type (in this case the user who kicked off the build),
+    // if present.
+    // def isStartedByTimer = currentBuild.rawBuild.getCause(hudson.model.Cause$TimerTrigger.TimerTriggerCause) != null
+    
+//                      sh "./ci/manage-sstate-cache ${env.WORKSPACE}/shared-sstate-cache"
+//     println startTime
+//    echo "need to manage cache"
+//}
+
 /**********************************************************************/
 /*******************         Pipeline         *************************/
 /**********************************************************************/
@@ -91,14 +105,17 @@ pipeline {
     stages {
         stage ('Manage sstate cache') {
             steps {
+                // manageSstateCache(currentBuild.startTimeInMillis())
                 script {
-                    // Get a specific Cause type (in this case the user who kicked off the build),
-                    // if present.
-                    // isStartedByTimer = currentBuild.rawBuild.getCause(hudson.model.Cause$TimerTrigger.TimerTriggerCause) != null
-                    def isStartedByTimer = currentBuild[‘rawBuild’].getCause(hudson.model.Cause$TimerTrigger.TimerTriggerCause) != null
-                    if (isStartedByTimer) {
-//                      sh "./ci/manage-sstate-cache ${env.WORKSPACE}/shared-sstate-cache"
-                        echo "need to manage cache"
+                    //it return same time as new Date()
+                    Calendar cal=Calendar.getInstance()
+                    def hour = cal.get(Calendar.HOUR_OF_DAY)
+                    println hour
+                    if (hour < 6) {
+                        dir("${env.WORKSPACE}/shared-sstate-cache") {
+                           echo "clear ${env.WORKSPACE}/shared-sstate-cache ..."
+                           deleteDir()
+                        }
                     }
                 }
             }
