ci/Jenkinsfile: erase more in wipeoutBuildSpace
Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>
(cherry picked from commit 3b31c3454b1410b57ed22430e87d36022939c740)

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -63,8 +63,16 @@ def prepareWorkspace(directoryName){
 }
 
 def wipeOutBuildspace(directoryName){
-    dir("${directoryName}") {
-        echo "Remove ${directoryName}..."
+    dir("${directoryName}@script") {
+        echo "Remove ${directoryName}@script..."
+        deleteDir()
+    }
+    dir("${directoryName}/buildspace") {
+        echo "Remove ${directoryName}/buildspace..."
+        deleteDir()
+    }
+    dir("${directoryName}@tmp") {
+        echo "Remove ${directoryName}@tmp..."
         deleteDir()
     }
 }
