ci/Jenkinsfile: delete shared DL_DIR in nightly build
Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -123,6 +123,10 @@ pipeline {
                            echo "clear ${env.WORKSPACE}/shared-sstate-cache ..."
                            deleteDir()
                         }
+                        dir("${env.WORKSPACE}/shared-dl-dir") {
+                           echo "clear ${env.WORKSPACE}/shared-dl-dir ..."
+                           deleteDir()
+                        }
                     }
                 }
             }
