--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -123,10 +123,12 @@ pipeline {
                            echo "clear ${env.WORKSPACE}/shared-sstate-cache ..."
                            deleteDir()
                         }
-                        dir("${env.WORKSPACE}/shared-dl-dir") {
-                           echo "clear ${env.WORKSPACE}/shared-dl-dir ..."
-                           deleteDir()
-                        }
+                    }
+                    // unconditionally remove to make sure we got everything
+                    // from mirror
+                    dir("${env.WORKSPACE}/shared-dl-dir") {
+                       echo "clear ${env.WORKSPACE}/shared-dl-dir ..."
+                       deleteDir()
                     }
                 }
             }
