--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "sources/poky"]
 	path = sources/poky
 	url = git://git.yoctoproject.org/poky
-	branch = morty
+	branch = pyro
 [submodule "sources/meta-tq"]
 	path = sources/meta-tq
 	url = ../meta-tq.git
@@ -9,16 +9,16 @@
 [submodule "sources/meta-openembedded"]
 	path = sources/meta-openembedded
 	url = https://github.com/openembedded/meta-openembedded.git
-	branch = morty
+	branch = pyro
 [submodule "sources/meta-tq-mfgtool"]
 	path = sources/meta-tq-mfgtool
 	url = ../meta-tq-mfgtool.git
-	branch = morty
+	branch = pyro
 [submodule "sources/meta-freescale"]
 	path = sources/meta-freescale
 	url = https://git.yoctoproject.org/git/meta-freescale
-	branch=morty
+	branch=pyro
 [submodule "sources/meta-freescale-distro"]
 	path = sources/meta-freescale-distro
 	url = https://github.com/Freescale/meta-freescale-distro.git
-	branch=morty
+	branch=pyro
