setup build env for TQMa8x
port from rocko to thud

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>
(cherry picked from commit f05fb35eae764e3b09f48fb624e11dbfd00670a7)
Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>
(cherry picked from commit 6bceb7482ea795bbdc62e6478078fe4de757c1e9)
Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,6 +16,18 @@
 [submodule "sources/meta-dumpling"]
 	path = sources/meta-dumpling
 	url = ../meta-dumpling.git
-[submodule "sources/meta-ti"]
-	path = sources/meta-ti
-	url = https://git.yoctoproject.org/git/meta-ti
+[submodule "sources/meta-qt5"]
+	path = sources/meta-qt5
+	url = git://github.com/meta-qt5/meta-qt5
+[submodule "sources/meta-browser"]
+	path = sources/meta-browser
+	url = git://github.com/OSSystems/meta-browser
+[submodule "sources/meta-fsl-bsp-release"]
+	path = sources/meta-fsl-bsp-release
+	url = https://source.codeaurora.org/external/imx/meta-fsl-bsp-release
+[submodule "sources/base"]
+	path = sources/base
+	url = git://github.com/Freescale/fsl-community-bsp-base
+[submodule "sources/meta-rust"]
+	path = sources/meta-rust
+	url = https://github.com/meta-rust/meta-rust.git
