--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,30 @@
 [submodule "sources/poky"]
 	path = sources/poky
 	url = git://git.yoctoproject.org/poky
-	branch = pyro
 [submodule "sources/meta-tq"]
 	path = sources/meta-tq
 	url = ../meta-tq.git
-	branch = morty
 [submodule "sources/meta-openembedded"]
 	path = sources/meta-openembedded
 	url = https://github.com/openembedded/meta-openembedded.git
-	branch = pyro
 [submodule "sources/meta-tq-mfgtool"]
 	path = sources/meta-tq-mfgtool
 	url = ../meta-tq-mfgtool.git
-	branch = pyro
 [submodule "sources/meta-freescale"]
 	path = sources/meta-freescale
 	url = https://git.yoctoproject.org/git/meta-freescale
-	branch=pyro
 [submodule "sources/meta-freescale-distro"]
 	path = sources/meta-freescale-distro
 	url = https://github.com/Freescale/meta-freescale-distro.git
-	branch=pyro
+[submodule "sources/meta-qt5"]
+	path = sources/meta-qt5
+	url = git://github.com/meta-qt5/meta-qt5
+[submodule "sources/meta-browser"]
+	path = sources/meta-browser
+	url = git://github.com/OSSystems/meta-browser
+[submodule "sources/meta-fsl-bsp-release"]
+	path = sources/meta-fsl-bsp-release
+	url = https://source.codeaurora.org/external/imx/meta-fsl-bsp-release
+[submodule "sources/base"]
+	path = sources/base
+	url = git://github.com/Freescale/fsl-community-bsp-base
