--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -60,17 +60,20 @@ def buildConfiguration(directoryName) {
 }
 
 def wipeOutBuildspace(directoryName){
+/*
     Calendar cal=Calendar.getInstance()
     def hour = cal.get(Calendar.HOUR_OF_DAY)
+
     if (hour < 8) {
         dir("${directoryName}/buildspace") {
             echo "Remove ${directoryName}/buildspace..."
             deleteDir()
         }
     }
+*/
     if (params.CLEAN_CACHES == true) {
         dir("${directoryName}/buildspace") {
-            echo "Remove ${directoryName}/buildspace..."
+            echo "Remove ${directoryName}/buildspace ... (CLEAN_CACHES)"
             deleteDir()
         }
     }
@@ -134,7 +137,7 @@ pipeline {
             steps {
                 // manageSstateCache(currentBuild.startTimeInMillis()) does not work
                 script {
-                    // returns same time as new Date()
+/*
                     Calendar cal=Calendar.getInstance()
                     def hour = cal.get(Calendar.HOUR_OF_DAY)
                     if (hour < 6) {
@@ -143,9 +146,10 @@ pipeline {
                             deleteDir()
                         }
                     }
+*/
                     if (params.CLEAN_CACHES == true) {
                         dir("${env.WORKSPACE}/shared-sstate-cache") {
-                            echo "clear ${env.WORKSPACE}/shared-sstate-cache ..."
+                            echo "clear ${env.WORKSPACE}/shared-sstate-cache ... (CLEAN_CACHES)"
                             deleteDir()
                         }
                     }
